syntax = "proto3";
package user_credential;

option go_package = "nfxid/protos/gen/auth/user_credential;usercredentialpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// 凭证类型枚举
enum AuthCredentialType {
  AUTH_CREDENTIAL_TYPE_UNSPECIFIED = 0;
  AUTH_CREDENTIAL_TYPE_PASSWORD = 1;  // 密码
  AUTH_CREDENTIAL_TYPE_PASSKEY = 2;   // Passkey
  AUTH_CREDENTIAL_TYPE_OAUTH_LINK = 3; // OAuth 链接
  AUTH_CREDENTIAL_TYPE_SAML = 4;      // SAML
  AUTH_CREDENTIAL_TYPE_LDAP = 5;      // LDAP
}

// 凭证状态枚举
enum AuthCredentialStatus {
  AUTH_CREDENTIAL_STATUS_UNSPECIFIED = 0;
  AUTH_CREDENTIAL_STATUS_ACTIVE = 1;    // 激活
  AUTH_CREDENTIAL_STATUS_DISABLED = 2;  // 禁用
  AUTH_CREDENTIAL_STATUS_EXPIRED = 3;   // 过期
}

// 用户凭证信息
// Note: id directly references directory.users.id (one-to-one relationship)
message UserCredential {
  string id = 1;                          // 凭证ID (UUID) - 直接引用 directory.users.id
  string tenant_id = 2;                   // 租户ID (UUID)
  AuthCredentialType credential_type = 3; // 凭证类型：password, passkey, oauth_link, saml, ldap
  optional string password_hash = 4;      // 密码哈希
  optional string hash_alg = 5;           // 哈希算法
  optional google.protobuf.Struct hash_params = 6; // 哈希参数 (JSONB)
  optional google.protobuf.Timestamp password_updated_at = 7;  // 密码更新时间
  optional google.protobuf.Timestamp last_success_login_at = 8; // 最后成功登录时间
  AuthCredentialStatus status = 9;       // 凭证状态：active, disabled, expired
  bool must_change_password = 10;         // 是否必须更改密码
  int32 version = 11;                     // 版本号
  google.protobuf.Timestamp created_at = 12;          // 创建时间
  google.protobuf.Timestamp updated_at = 13;          // 更新时间
  optional google.protobuf.Timestamp deleted_at = 14; // 软删除时间
}

// UserCredential 服务 - 供其他服务通过 gRPC 管理用户凭证
service UserCredentialService {
  // 创建用户凭证
  rpc CreateUserCredential (CreateUserCredentialRequest) returns (CreateUserCredentialResponse);
  
  // 根据ID获取用户凭证
  rpc GetUserCredentialByID (GetUserCredentialByIDRequest) returns (GetUserCredentialByIDResponse);
  
  // 根据用户ID获取用户凭证
  rpc GetUserCredentialByUserID (GetUserCredentialByUserIDRequest) returns (GetUserCredentialByUserIDResponse);
  
  // 批量获取用户凭证
  rpc BatchGetUserCredentials (BatchGetUserCredentialsRequest) returns (BatchGetUserCredentialsResponse);
}

// UserCredential Service Messages
message CreateUserCredentialRequest {
  string id = 1;                          // 用户ID (UUID) - 直接引用 directory.users.id
  optional string tenant_id = 2;          // 租户ID (UUID)
  AuthCredentialType credential_type = 3; // 凭证类型：password, passkey, oauth_link, saml, ldap
  string password = 4;                    // 密码（明文，服务端会进行哈希）
  bool must_change_password = 5;         // 是否必须更改密码
}

message CreateUserCredentialResponse {
  UserCredential user_credential = 1;
}

message GetUserCredentialByIDRequest {
  string id = 1;
}

message GetUserCredentialByIDResponse {
  UserCredential user_credential = 1;
}

message GetUserCredentialByUserIDRequest {
  string user_id = 1;
  optional string tenant_id = 2;
}

message GetUserCredentialByUserIDResponse {
  UserCredential user_credential = 1;
}

message BatchGetUserCredentialsRequest {
  repeated string ids = 1;
}

message BatchGetUserCredentialsResponse {
  repeated UserCredential user_credentials = 1;
}
